# devops-django-practice

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  run_k8s.sh  run_server.sh  task_definition.json
.github/workflows/: CI-CD django.yml
app_foods/: tests.py
app_general/templates/app_general/: about.html
docker-django/: Dockerfile
k8s/: django-deployment.yaml  nginx-deployment.yaml  nginx.yaml  pgadmin-deployment.yaml  postgres-deployment.yaml
nginx/: Dockerfile  nginx.conf
project_jrd/: settings.py
ssl/: README.md  setup_https.sh
ssl/ansible/: inventory.ini  ssl_playbook.yml
ssl/ansible/roles/ssl/handlers/: main.yml
ssl/ansible/roles/ssl/tasks/: main.yml
ssl/ansible/roles/ssl/templates/: docker-compose.yml.j2  nginx_http.conf.j2  nginx_https.conf.j2
