[tool.poetry]
name = "django-junraider"
version = "0.1.0"
description = ""
authors = ["Thanaphat-Koko <kokoy103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
whitenoise = "^6.7.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
